@@ -114,14 +114,15 @@ function generatePrettyUrl($text)
 	return $prettytext;
 }
 
-//	Synchronise the topic URLs, fixing any differences between the topics and pretty_topic_urls tables
+//	Build the table of pretty topic URLs
+//	This function used to do a lot more, but I kept the name the same though now it doesn't
 function synchroniseTopicUrls()
 {
 	global $db_prefix, $modSettings;
 
 	//	Get the current database pretty URLs and other stuff
 	$query = db_query("
-		SELECT t.ID_TOPIC, t.ID_BOARD, m.subject, p.ID_BOARD as ID_BOARD2, p.pretty_url
+		SELECT t.ID_TOPIC, t.ID_BOARD, m.subject, p.pretty_url
 		FROM ({$db_prefix}topics AS t, {$db_prefix}messages AS m)
 			LEFT JOIN {$db_prefix}pretty_topic_urls AS p ON (t.ID_TOPIC = p.ID_TOPIC)
 		WHERE m.ID_MSG = t.ID_FIRST_MSG", __FILE__, __LINE__);
@@ -136,7 +137,6 @@ function synchroniseTopicUrls()
 		$topicData[] = array(
 			'ID_TOPIC' => $row['ID_TOPIC'],
 			'ID_BOARD' => $row['ID_BOARD'],
-			'ID_BOARD2' => isset($row['ID_BOARD2']) ? $row['ID_BOARD2'] : 0,
 			'pretty_url' => isset($row['pretty_url']) ? $row['pretty_url'] : '',
 			'subject' => $row['subject']
 		);
@@ -158,19 +158,16 @@ function synchroniseTopicUrls()
 				$pretty_text = substr($pretty_text, 0, 70) . ($pretty_text != '' ? '-t' : 't') . $row['ID_TOPIC'];
 
 			//	Update the arrays
-			$tablePretty[] = '(' . $row['ID_TOPIC'] . ', ' . $row['ID_BOARD'] . ', "' . $pretty_text . '")';
+			$tablePretty[] = '(' . $row['ID_TOPIC'] . ', "' . $pretty_text . '")';
 			$oldUrls[] = $pretty_text;
 		}
-		//	If the board IDs don't match, use the real one
-		elseif ($row['ID_BOARD'] != $row['ID_BOARD2'])
-			$tablePretty[] = '(' . $row['ID_TOPIC'] . ', ' . $row['ID_BOARD'] . ', "' . $row['pretty_url'] . '")';
 	}
 
 	//	Update the database
 	if (count($tablePretty) > 0)
 		db_query("
 			REPLACE INTO {$db_prefix}pretty_topic_urls
-				(ID_TOPIC, ID_BOARD, pretty_url)
+				(ID_TOPIC, pretty_url)
 			VALUES " . implode(', ', $tablePretty), __FILE__, __LINE__);
 }
 
@@ -183,7 +180,7 @@ function updateFilters()
 	$prettyFilters = unserialize($modSettings['pretty_filters']);
 	$filterSettings = array();
 	foreach ($prettyFilters as $filter)
-		if (isset($filter['filter'])
+		if (isset($filter['filter']))
 			$filterSettings[$filter['filter']['priority']] = $filter['filter']['callback'];
 
 	//	Update the settings table
